--- a/Part 1 - Intro/styles.css
+++ b/Part 1 - Intro/styles.css
@@ -66,7 +66,7 @@
 
 img {
 	width: 100px;
-	margin: 10px;
+	margin: 5px;
 }
 
 body {
@@ -85,10 +85,11 @@ ul {
 li {
 	list-style-type: none;
 	margin: 20px auto;
-	padding: 10px 20px;
+	padding: 5px 20px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	user-select: none;
 }
 
 .fav {
